--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:label="myapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data
+            android:name="com.mapbox.token"
+            android:value="pk.eyJ1IjoidG9uYnkiLCJhIjoiY21mbWZveWJyMDExZzJscXo5eDRvMzE0NiJ9.0JUjKFDv1qSa4CmQbg7UXA" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
