Add comprehensive navigation features to Naija Navigator
Features added:
- Turn-by-turn navigation with Mapbox Directions API
- Real-time speed tracking and display
- Estimated arrival time (ETA) calculation
- Traffic-aware routing
- Weather information display
- Smart destination search with autocomplete
- iOS platform support
- Enhanced UI with navigation panel
- Location permissions handling

Technical improvements:
- Updated Mapbox tokens for all platforms
- Added navigation and weather services
- Implemented search widget with Mapbox Geocoding
- Added required dependencies (http, weather, intl, provider)
- Fixed Android permissions for network and location
- Configured Mapbox downloads token

Co-authored-by: Ona <no-reply@ona.com>

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,13 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:label="myapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <meta-data
             android:name="com.mapbox.token"
-            android:value="pk.eyJ1IjoidG9uYnkiLCJhIjoiY21mbWZveWJyMDExZzJscXo5eDRvMzE0NiJ9.0JUjKFDv1qSa4CmQbg7UXA" />
+            android:value="pk.eyJ1IjoidG9uYnkiLCJhIjoiY21nbDVzYjdhMHhqMDJycXFxaWlkcnY2YiJ9._0ujjRjoFjGso2ZU4Zn6eQ" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
