--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,24 @@ dependencies:
   
   # For getting the device's GPS location
   geolocator: ^14.0.2
+  
+  # HTTP requests for API calls
+  http: ^1.2.0
+  
+  # For weather data
+  weather: ^3.1.1
+  
+  # For permission handling
+  permission_handler: ^11.3.0
+  
+  # For JSON parsing
+  json_annotation: ^4.8.1
+  
+  # For state management
+  provider: ^6.1.1
+  
+  # For formatting
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
