--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: mapbox_nigeria_app
 description: A Flutter app showing Mapbox with Nigerian locations.
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 4.0.0+4
 
 environment:
   sdk: ">=3.2.0 <4.0.0"
@@ -34,6 +34,12 @@ dependencies:
   
   # For formatting
   intl: ^0.19.0
+  
+  # Text-to-speech for spoken directions
+  flutter_tts: ^4.2.0
+  
+  # For polyline drawing
+  turf: ^0.0.9
 
 dev_dependencies:
   flutter_test:
