--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   
   # For polyline drawing
   turf: ^0.0.9
+  # For sharing ETA and links
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
