Migrate from Mapbox to Google Maps Platform
- Replace mapbox_maps_flutter with google_maps_flutter (v2.5.0)
- Update lib/main.dart to use GoogleMap widget and Google Maps API
- Update navigation_service.dart to call Google Maps Directions API
- Replace Mapbox polylines/markers with Google Maps equivalents
- Add fromGoogleMapsJson factory methods for route parsing
- Configure Android (AndroidManifest.xml) and iOS (AppDelegate.swift) with API key placeholders
- Remove hard-coded Mapbox token from code
- Update widget test to match navigation app structure

IMPORTANT: Replace YOUR_GOOGLE_MAPS_API_KEY in:
- android/app/src/main/AndroidManifest.xml
- ios/Runner/AppDelegate.swift
- lib/services/navigation_service.dart (_googleMapsApiKey)

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,9 +7,10 @@
         android:label="myapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <!-- Google Maps API Key - IMPORTANT: Replace YOUR_GOOGLE_MAPS_API_KEY with your actual key from Google Cloud Console -->
         <meta-data
-            android:name="com.mapbox.token"
-            android:value="pk.eyJ1IjoidG9uYnkiLCJhIjoiY21nbDVzYjdhMHhqMDJycXFxaWlkcnY2YiJ9._0ujjRjoFjGso2ZU4Zn6eQ" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_GOOGLE_MAPS_API_KEY" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
