Add dotenv support: .env.example, .gitignore update, flutter_dotenv dependency, env injector script, and load .env in main

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ migrate_working_dir/
 /build/
 /coverage/
 
+# Environment file (do not commit your real keys)
+.env
+
 # Symbolication related
 app.*.symbols
 
