--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 
   # Google Maps for Flutter
   google_maps_flutter: ^2.5.0
+  flutter_dotenv: ^5.0.2
   
   # For getting the device's GPS location
   geolocator: ^14.0.2
